# audio-transcription

./: .gitignore  CMakeLists.txt  README.md
scripts/: baixar-modelo.sh  build.sh  extrair_lotes.py  planilha_lotes.py
src/: main.cpp
